--- a/package.json
+++ b/package.json
@@ -19,11 +19,13 @@
     "expo-status-bar": "~2.0.0",
     "react": "^18.3.1",
     "react-native": "^0.76.3",
+    "react-native-vector-icons": "^10.2.0",
     "react-redux": "^9.1.2"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
     "@types/react": "~18.3.12",
+    "@types/react-native-vector-icons": "^6.4.18",
     "expo": "^52.0.11",
     "typescript": "^5.7.2"
   },
