--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
     "expo-status-bar": "~2.0.0",
     "react": "^18.3.1",
     "react-native": "^0.76.3",
+    "react-native-paper": "^5.12.5",
+    "react-native-safe-area-context": "^5.0.0",
     "react-native-vector-icons": "^10.2.0",
     "react-redux": "^9.1.2"
   },
